--- a/journal/202106.md
+++ b/journal/202106.md
@@ -215,7 +215,7 @@ Developer:
 
 { can add a pretty shot of some new UI made in June, how about the new [voting modal](https://github.com/planetdecred/godcr/pull/468) ? }
 
-{ add open call for testers? }
+godcr is approaching the public testing phase. Look forward for pre-release builds.
 
 <a id="dcrdata" />
 
@@ -227,21 +227,13 @@ Developer:
 - removed dependency on [axios](https://github.com/decred/dcrdata/pull/1833) for making requests from UI code
 - fixed [connectivity](https://github.com/decred/dcrdata/pull/1837) with Bittrex
 
-{ check other repos in:
-
-- https://github.com/decred
-- https://github.com/planetdecred
-- https://github.com/raedahgroup
-
-}
-
 Other:
 
-- Trezor https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$Mo6avtuFcQBJ32WeGkR1BO0dQ8-ZnRoIcxpAPWoMdwA
-  - https://github.com/trezor/trezor-firmware/blob/master/core/CHANGELOG.md
-- $100K bounty https://twitter.com/fst_nml/status/1404114567525978121
-  - https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$maP9GmmAQiV8Ylh65llvHgLqbgJCThcXJYU6Bcqzxwg
-- TradeAgent https://matrix.to/#/!gruHpujXftcsHcghjx:planetdecred.org/$Z2pfRvKOqiSOhB0RgbxokZix7xHXgibnmGuHphtkyOw
+- Decred [staking](https://github.com/trezor/trezor-firmware/pull/1249) support was merged in the firmware [repository](https://github.com/trezor/trezor-firmware/blob/master/core) for Trezor Model T and included in [release](https://github.com/trezor/trezor-firmware/blob/master/core/CHANGELOG.md) 2.4.0. More work is needed on Decrediton's end but this is a big milestone.
+
+- @fst\_nml announced a $100K [bounty](https://twitter.com/fst_nml/status/1404114567525978121) for building Decred integration with [THORChain](https://docs.thorchain.org/) (a decentralized cross-chain liquidity protocol based on Tendermint, Cosmos and utilizing Threshold Signature Schemes). The development is already [in progress](https://twitter.com/THORChain/status/1410176914619179009). ([discussion](https://www.reddit.com/r/decred/comments/o14da0/decred_community_member_willing_to_put_up_100k_to/))
+
+- @raedah [announced](https://matrix.to/#/!gruHpujXftcsHcghjx:planetdecred.org/$Z2pfRvKOqiSOhB0RgbxokZix7xHXgibnmGuHphtkyOw) early access of the TradeAgent app for finding nearby cryptocurrency traders. Available on [Google Play](https://play.google.com/store/apps/details?id=com.raedahgroup.tradeagent.liveserver) for Android.
 
 ## People
 
