--- a/journal/202106.md
+++ b/journal/202106.md
@@ -95,8 +95,6 @@ Developer-facing changes include the completion of several security improvements
 - reduced [dependencies](https://github.com/decred/decrediton/pull/3509) to rely less on third party code and improve security by reducing the attack surface of a possibly supply chain attack
 - introduced a more secure confirmation dialog and used it for confirming [VSP access](https://github.com/decred/decrediton/pull/3515) and [transaction signing](https://github.com/decred/decrediton/pull/3519)
 
-{ code stats }
-
 { UI shot of some view added/updated in June }
 
 <a id="politeia" />
@@ -106,7 +104,7 @@ Developer-facing changes include the completion of several security improvements
 User-facing:
 
 - added a button to access [raw Markdown](https://github.com/decred/politeiagui/issues/2415)
-- show status of [proposal credit](https://github.com/decred/politeiagui/pull/2417) confirmation (gives a hint how soon the credits may be used)
+- show status of [proposal credit](https://github.com/decred/politeiagui/pull/2417) payment (gives an idea how soon the credits can be used to submit new proposals)
 - show a [banner](https://github.com/decred/politeiagui/pull/2456) when the user is viewing `proposals-archive.decred.org` to reduce confusion when clicking site logo
 - improved look of the [Flat mode](https://github.com/decred/politeiagui/pull/2434) button
 - added proposal name to email [subjects](https://github.com/decred/politeia/pull/1440)
@@ -118,31 +116,36 @@ Backend and CLI:
 - `politeiavoter` will now [retry](https://github.com/decred/politeia/pull/1438) its votes on server errors
 - added [MySQL](https://github.com/decred/politeia/pull/1419) implementation for the user database (the backend uses MySQL because of [tlog](https://github.com/decred/politeia/issues/1392))
   - { can also comment why we need to migrate from cockroach to mysql }
-- updated [READMEs](https://github.com/decred/politeia/pull/1421) with setup instructions to get a full Politeia instance up and running (new contributors, wait no more!)
+- updated [READMEs](https://github.com/decred/politeia/pull/1421) with setup instructions to get a full Politeia instance up and running _(new contributors, wait no more!)_
 - added missing [docs](https://github.com/decred/politeia/pull/1435) to `pictl` and `politeiaverify` tools
 - more meaningful [stack traces](https://github.com/decred/politeia/pull/1428)
 - test coverage for [user](https://github.com/decred/politeia/pull/1235) management and fetching
-- 2 bug fixes
+- ~2 bug fixes
 
 Contractor Management System (CMS):
 
-- relay data from [archived proposals](https://github.com/decred/politeia/pull/1422) to the UI (allows to use archived proposals in invoices)
-- added tracking [spends](https://github.com/decred/politeia/pull/1431) from the new Treasury (to determine if the invoice has been paid)
+- allow to use [archived proposals](https://github.com/decred/politeia/pull/1422) in invoices
+- added tracking of [spends](https://github.com/decred/politeia/pull/1431) from the new Treasury (to determine if the invoice has been paid)
 - fixed proposal [expenses](https://github.com/decred/politeia/pull/1429) calculation and [fetching](https://github.com/decred/politeia/pull/1430) of correct invoice version
 
 <a id="vspd" />
 
 **[vspd](https://github.com/decred/vspd)**
 
-- added the [share](https://github.com/decred/vspd/pull/264) of VSP's live tickets, as well as its revoked percentage, to the homepage and `/vspinfo` response
+User-facing:
+
+- added the [share](https://github.com/decred/vspd/pull/264) of VSP's live tickets, as well as its revoked percentage, to the homepage and status API response
 - allow admins to set a custom [message](https://github.com/decred/vspd/pull/269) that will be shown on the webpage and returned by the status API when the VSP is closed
+- [admin page](https://github.com/decred/vspd/pull/274) UI tweaks
 - improved [cache busting](https://github.com/decred/vspd/pull/270) (prevents users from seeing outdated resources)
-- compare [scripts](https://github.com/decred/vspd/pull/267) rather than addresses when verifying fee payments (this is more correct, more efficient and fixes one edge case)
+
+Developer/internal:
+
+- compare transaction [scripts](https://github.com/decred/vspd/pull/267) rather than addresses when verifying fee payments (this is more correct, more efficient and fixes some edge cases)
 - [filtering](https://github.com/decred/vspd/pull/265) of database tickets made more than twice faster
 - ensure ticket [purchase height](https://github.com/decred/vspd/pull/277) is set for all tickets
 - improved [shutdown](https://github.com/decred/vspd/pull/271) handling
 - refactored [GUI cache](https://github.com/decred/vspd/pull/273) for better reuse
-- [UI tweaks](https://github.com/decred/vspd/pull/274)
 
 <a id="dcrpool" />
 
