--- a/journal/202106.md
+++ b/journal/202106.md
@@ -139,7 +139,7 @@ User-facing:
 - [admin page](https://github.com/decred/vspd/pull/274) UI tweaks
 - improved [cache busting](https://github.com/decred/vspd/pull/270) (prevents users from seeing outdated resources)
 
-Developer/internal:
+Internal:
 
 - compare transaction [scripts](https://github.com/decred/vspd/pull/267) rather than addresses when verifying fee payments (this is more correct, more efficient and fixes some edge cases)
 - [filtering](https://github.com/decred/vspd/pull/265) of database tickets made more than twice faster
@@ -162,10 +162,10 @@ Merged in master and v1.2.0 release:
 **[DCRDEX](https://github.com/decred/dcrdex)**
 
 - more accurate [order status](https://github.com/decred/dcrdex/pull/1094) reporting
+- added [trading fees](https://github.com/decred/dcrdex/pull/1074) overview to the README
 - improved match [validation](https://github.com/decred/dcrdex/pull/1077) _(has an interesting [convo](https://github.com/decred/dcrdex/pull/1077#discussion_r626657047) on concurrency { keep or drop? })_
 - store [archived orders](https://github.com/decred/dcrdex/pull/1071) separately to speed up processing of active orders
-- added [trading fees](https://github.com/decred/dcrdex/pull/1074) overview to the README
-- verify [script versions](https://github.com/decred/dcrdex/pull/1107) (use different methods for dcrd 1.6 and 1.7) and prepare for handling different script versions (this was also [backported](https://github.com/decred/dcrdex/pull/1108) to the next v0.2 release)
+- verify [script versions](https://github.com/decred/dcrdex/pull/1107) (use different methods for dcrd 1.6 and 1.7) and prepare for handling different script versions ([backported](https://github.com/decred/dcrdex/pull/1108) v0.2 branch)
 
 <a id="dcrandroid" />
 
@@ -174,12 +174,12 @@ Merged in master and v1.2.0 release:
 - option to [send change](https://github.com/planetdecred/dcrandroid/pull/568) to unmixed account (to be mixed before use), and indicate to which account the change will go on the Send page
 - distinguish [mixes](https://github.com/planetdecred/dcrandroid/pull/565) with unique label and icon
 - updated [French](https://github.com/planetdecred/dcrandroid/pull/567) translation
-- bug fixes { count? }
+- ~3 bug fixes
 
 Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) (base library for Android/iOS apps and godcr):
 
 - added filters to find [mixed](https://github.com/planetdecred/dcrlibwallet/pull/195) or various [staking](https://github.com/planetdecred/dcrlibwallet/pull/201) transactions
-- added [statistics](https://github.com/planetdecred/dcrlibwallet/pull/201) for all transactions or staking activity
+- added [statistics](https://github.com/planetdecred/dcrlibwallet/pull/201) for across transactions and staking activity
 - option to send [change](https://github.com/planetdecred/dcrlibwallet/pull/199) to unmixed account
 - fixed [insufficient](https://github.com/planetdecred/dcrlibwallet/pull/189) balance when paying vspd ticket fees
 
@@ -188,7 +188,7 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) (base lib
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
 - option to [send change](https://github.com/planetdecred/dcrios/pull/807) to unmixed account (to be mixed before use), and indicate to which account the change will go on the Send page
-- prevent [sleep]https://github.com/planetdecred/dcrios/pull/798) while syncing, rescanning or mixing
+- prevent [sleep](https://github.com/planetdecred/dcrios/pull/798) while syncing, rescanning or mixing
 - more flexible [dropdown](https://github.com/planetdecred/dcrios/pull/738) menu on the wallets list
 - distinguish [mixes](https://github.com/planetdecred/dcrios/pull/801) with unique label and icon
 - UI tweaks
@@ -200,8 +200,7 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) (base lib
 
 User-facing:
 
-- implemented views: [Ticket activity](https://github.com/planetdecred/godcr/pull/439), [Statistics](https://github.com/planetdecred/godcr/pull/445), proposal [voting modal](https://github.com/planetdecred/godcr/pull/468)
-- added [start page](https://github.com/planetdecred/godcr/pull/465) that is shown while the wallets are loading
+- implemented views: [Ticket activity](https://github.com/planetdecred/godcr/pull/439), [Statistics](https://github.com/planetdecred/godcr/pull/445), proposal [voting modal](https://github.com/planetdecred/godcr/pull/468), [start page](https://github.com/planetdecred/godcr/pull/465) that is shown while the wallets are loading
 - added explainer [tooltips](https://github.com/planetdecred/godcr/pull/448) for tickets
 - allow to go to [previous page](https://github.com/planetdecred/godcr/pull/491)
 - show [account](https://github.com/planetdecred/godcr/pull/467) names on inputs and outputs of the transaction
@@ -211,8 +210,8 @@ User-facing:
 Developer:
 
 - extracted reusable code for [pages](https://github.com/planetdecred/godcr/pull/459), [modals](https://github.com/planetdecred/godcr/pull/460), [notifications](https://github.com/planetdecred/godcr/pull/464), and [account selector](https://github.com/planetdecred/godcr/pull/484) (along with refactoring and cleanup)
-- refactored for better use of [dcrlibwallet](https://github.com/planetdecred/godcr/pull/475) library
-- removed global subpage buttons and create them [locally](https://github.com/planetdecred/godcr/pull/492) on each page (fixes pages interfering with each other)
+- refactored for improve the use of [dcrlibwallet](https://github.com/planetdecred/godcr/pull/475)
+- replaced global subpage buttons with instances [local](https://github.com/planetdecred/godcr/pull/492) to each page (fixes pages interfering with each other)
 - implemented more [recommendations](https://paste.sr.ht/~eliasnaur/cea1d29d6a5f96668b5e166c2f39ef596974574f) from Elias Naur (creator of the Gio UI library)
 
 { can add a pretty shot of some new UI made in June, how about the new [voting modal](https://github.com/planetdecred/godcr/pull/468) ? }
@@ -233,7 +232,7 @@ Other:
 
 - Decred [staking](https://github.com/trezor/trezor-firmware/pull/1249) support was merged in the firmware [repository](https://github.com/trezor/trezor-firmware/blob/master/core) for Trezor Model T and included in [release](https://github.com/trezor/trezor-firmware/blob/master/core/CHANGELOG.md) 2.4.0. More work is needed on Decrediton's end but this is a big milestone.
 
-- @fst\_nml announced a $100K [bounty](https://twitter.com/fst_nml/status/1404114567525978121) for building Decred integration with [THORChain](https://docs.thorchain.org/) (a decentralized cross-chain liquidity protocol based on Tendermint, Cosmos and utilizing Threshold Signature Schemes). The development is already [in progress](https://twitter.com/THORChain/status/1410176914619179009). ([discussion](https://www.reddit.com/r/decred/comments/o14da0/decred_community_member_willing_to_put_up_100k_to/))
+- @fst\_nml announced a $100K [bounty](https://twitter.com/fst_nml/status/1404114567525978121) for building Decred integration with [THORChain](https://docs.thorchain.org/) - a decentralized cross-chain liquidity protocol based on Tendermint, Cosmos and utilizing Threshold Signature Schemes. The development is already [in progress](https://twitter.com/THORChain/status/1410176914619179009). ([discussion](https://www.reddit.com/r/decred/comments/o14da0/decred_community_member_willing_to_put_up_100k_to/))
 
 - @raedah [announced](https://matrix.to/#/!gruHpujXftcsHcghjx:planetdecred.org/$Z2pfRvKOqiSOhB0RgbxokZix7xHXgibnmGuHphtkyOw) early access of the TradeAgent app for finding nearby cryptocurrency traders. Available on [Google Play](https://play.google.com/store/apps/details?id=com.raedahgroup.tradeagent.liveserver) for Android.
 
