Dev feedback from davecgh

--- a/journal/202106.md
+++ b/journal/202106.md
@@ -46,13 +46,11 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 The way standard scripts are handled has been reworked to address a number of long-standing issues.
 
-For a quick background, "[scripts](https://devdocs.decred.org/developer-guides/transactions/txscript/overview/)" are small commands stored inside [transactions](https://devdocs.decred.org/developer-guides/transactions/transaction-format/) that consume "input" coins from past transactions and create new "output" coins for the recipient. "Standard scripts" is a subset of all scripts allowed by the consensus that covers most useful operations (sending funds, staking, multisig, etc) optimized for efficiency and network security. Mainnet nodes will normally [refuse](https://github.com/decred/dcrd/pull/2656#issuecomment-851105968) to accept and relay transactions containing non-standard scripts.
+For a quick background, "[scripts](https://devdocs.decred.org/developer-guides/transactions/txscript/overview/)" are small commands stored inside [transactions](https://devdocs.decred.org/developer-guides/transactions/transaction-format/) that consume "input" coins from past transactions and create new "output" coins for the recipient. "Standard scripts" is a subset of all scripts allowed by the consensus that covers most useful operations (sending funds, staking, multisig, etc) optimized for efficiency and network security. Mainnet nodes will normally [refuse](https://github.com/decred/dcrd/pull/2656#issuecomment-851105968) to accept and relay standalone transactions (those that are not part of a block) containing non-standard scripts.
 
 The [reworked code](https://github.com/decred/dcrd/pull/2656) adds a new package called `stdscript` that supports different script versions (this was hard to support previously and is required for the next consensus upgrade), provides a more ergonomic API for developers (including multisig and atomic swap helpers) and improves separation between "standard" and "consensus" (a common point of confusion for new developers). Additionally, the policy of what scripts are considered "standard" has been further tightened to help ensure the typical scripts occupy less space on-chain and further restrict cases that don't make sense.
 
 As usual, this large change comes in a series of easy-to-digest commits with informative descriptions, tests, benchmarks, examples, all finished with a thorough new [README](https://github.com/decred/dcrd/blob/master/internal/staging/stdscript/README.md).
-
-{ couldn't resist writing it up, but have a second look if it's too much text for stdscript }
 
 A number of other [changes](https://github.com/decred/dcrd/pulls?q=standardness+is%3Apr+merged%3A2021-06-01..2021-06-30+sort%3Aupdated-asc) have been focused on removing the usages of standardness code from consensus code, since the policy of what is considered "standard" may change at any time without requiring a consensus change and so consensus code must not be affected.
 
@@ -462,6 +460,6 @@ Most information from third parties is relayed directly from source after a mini
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: {}
+- reviews and feedback: davecgh
 - title image: {}
 - funding: Decred stakeholders
