--- a/journal/202106.md
+++ b/journal/202106.md
@@ -112,8 +112,7 @@ Backend and CLI:
 
 - `politeiavoter` [upgraded](https://github.com/decred/politeia/pull/1235) to the new API released with [v1.0.0](https://github.com/decred/politeia/releases/tag/v1.0.0)
 - `politeiavoter` will now [retry](https://github.com/decred/politeia/pull/1438) its votes on server errors
-- added [MySQL](https://github.com/decred/politeia/pull/1419) implementation for the user database. The data will need to be migrated from CockroachDB to remove this dependency. The choice was limited to MySQL by [tlog](https://github.com/decred/politeia/issues/1392).
-  - { can also comment why we need to migrate from cockroach to mysql }
+- added [MySQL](https://github.com/decred/politeia/pull/1419) implementation of the user database. The data will need to be migrated from CockroachDB to remove this dependency and have only one database to deal with. The choice of MySQL was dictated by [tlog](https://github.com/decred/politeia/issues/1392) (which [does not](https://github.com/google/trillian/issues/1298) support PostgreSQL).
 - updated [READMEs](https://github.com/decred/politeia/pull/1421) with setup instructions to get a full Politeia instance up and running _(new contributors, wait no more!)_
 - added missing [docs](https://github.com/decred/politeia/pull/1435) to `pictl` and `politeiaverify` tools
 - more meaningful [stack traces](https://github.com/decred/politeia/pull/1428)
