--- a/journal/202106.md
+++ b/journal/202106.md
@@ -237,29 +237,19 @@ Other:
 
 ## People
 
-{ hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
-
-Welcome to new first time contributors with code merged to master: @vibros68 ([politeiagui](https://github.com/decred/politeiagui/commits?author=vibros68)) and @x-walker-x ([politeiagui](https://github.com/decred/politeiagui/commits?author=x-walker-x)).
-
-
-Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
-
-{ welcome new corporate contractors with short intros, if any }
-
-{ updates from existing contractors }
+Welcome to new first time contributors with code merged to master: @vibros68 ([politeiagui](https://github.com/decred/politeiagui/commits?author=vibros68)) and @x-walker-x ([politeiagui](https://github.com/decred/politeiagui/commits?author=x-walker-x))!
 
 { interviews about people }
 
-Community stats as of {date}:
+Community stats as of Jul 1:
 
-- Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{})
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
-- GitHub [dcrd](https://github.com/decred/dcrd) stars: {} (+{}), forks: {} (+{})
+- [Twitter](https://twitter.com/decredproject) followers: 46,919 (+1,195)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 11,322 (+132)
+- [Matrix](https://chat.decred.org/) #general users: 501 (+34)
+- [Discord](https://discord.gg/GJ2GXfz) users: 1,933 (+146)
+- [Telegram](https://t.me/Decred) users: 2,733 (+28)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,570 (+30), views: 188K (+2K)
+- GitHub [dcrd](https://github.com/decred/dcrd) stars: 601 (+3), forks: 256 (+1)
 
 { notable SM activity }
 
