--- a/journal/202106.md
+++ b/journal/202106.md
@@ -251,7 +251,7 @@ Community stats as of Jul 1:
 - [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,570 (+30), views: 188K (+2K)
 - GitHub [dcrd](https://github.com/decred/dcrd) stars: 601 (+3), forks: 256 (+1)
 
-{ notable SM activity }
+June's recap of interesting social media dynamics is [here](https://decredcommunity.github.io/social-media-stats/posts/20210711.1).
 
 
 ## Governance
