Net mined blocks

--- a/journal/202106.md
+++ b/journal/202106.md
@@ -275,13 +275,13 @@ See Politeia Digest [issue 43](https://blockcommons.red/politeia-digest/issue043
 
 **Hashrate**: June's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=kpb32srm-kqn8vbkn&scale=linear&bin=block&axis=time) opened at ~369 Ph/s and closed ~73 Ph/s, bottoming at 61 Ph/s and peaking at 438 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jul 1: Poolin 37%, F2Pool 28%, Antpool 8%, Luxor 5%, BTC.com 5%,  Huobipool 1%, UUPool 0.2%, Coinmine 0.1%.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jul 1: Poolin 37%, F2Pool 28%, Antpool 8%, Luxor 5%, BTC.com 5%, HuobiPool 1%, UUPool 0.2%, CoinMine 0.1%.
 
 As you can see above had a large drop in hashrate due to miners shifting out of China due to a recent [ban](https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere). This is especially visible in ASIC mined coins like Decred and [Bitcoin](https://twitter.com/krugermacro/status/1409484360651317250). 
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before {date}: {PoolName n%, ...}.
+Distribution of 1,000 actually [mined blocks](https://miningpoolstats.stream/decred) almost matches the reported hashrate. Unidentified 15% mined blocks are split between same 4 addresses as [previously](202105.md).
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=kpb32srm-kqn8vbkn&axis=time&visibility=true-true&mode=stepped) varied between 168-208 DCR, with 30-day [average](https://dcrstats.com/) at 184.7 DCR (-1).
 
