--- a/journal/202106.md
+++ b/journal/202106.md
@@ -289,7 +289,7 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 
 { recap of ticket price action if it was interesting }
 
-**VSP**: On {}, {} (+{}) live tickets were managed by vspd servers and {} (-{}) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the {} legacy and {} new VSPs managed {}% of the ticket pool. {How to do this ?}
+**VSP**: On Jul 1, ~8,000 (-200) live tickets were managed by vspd servers and ~600 (-500) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the 12 legacy and 13 new VSPs managed 20.9% of the ticket pool. Delisted but still active legacy VSPs managed 26 live tickets (-35).
 
 **Nodes**: Throughout June there were around 216 reachable nodes according to [dcrextdata](https://analytics.planetdecred.org/nodes).
 
