--- a/journal/202106.md
+++ b/journal/202106.md
@@ -297,7 +297,7 @@ Node versions as of Jul 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (2
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jzh4wow9-ks9hgjcu&bin=day&axis=time&visibility=true-true-true) varied between 43.7-47.0%.
 
-{ maybe } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 34 nodes (+1), 60 channels (+7) with a total capacity of 21.8 DCR (+4.7), as of Jul 1.
 
 { any interesting analysis or events in the network }
 
