Gov tspend vote

--- a/journal/202106.md
+++ b/journal/202106.md
@@ -258,12 +258,14 @@ June's recap of interesting social media dynamics is [here](https://decredcommun
 
 In June the new [Treasury](https://dcrdata.decred.org/treasury) received 10,510 DCR worth $1.4 million at June's average rate of $131.52. 1,460 DCR was spent (from the legacy Treasury address) to pay contractors, worth $192K at June's rate, or $253K at May's billing rate of $173.47. As of Jul 2, a combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and new Treasury is 692,988 DCR (91.4 million USD at $131.88).
 
-{ is it possible to tally votes for first real tspend? if yes let's add it and link https://twitter.com/behindtext/status/1402628975676035078 }
+The first real transaction from the new Treasury was not mined because of the [bug]({}) described above and the contractors were paid from the legacy one instead. Even though it didn't work [as planned](https://twitter.com/behindtext/status/1402628975676035078), that transaction showed a high engagement of on-chain voters and high support of the current Treasury management: 11,943 tickets out of the max possible 17,280 voted Yes and zero voted No - a 69% turnout. It could go even higher when TSPEND voting is implemented for VSP users, who currently hold around 20% of live tickets.
 
 Three proposals were published on Politeia, and all three have been approved with strong approval ratings.
 
 - The [Explicit Version Upgrades Consensus Change](https://proposals.decred.org/record/3a98861) proposal hit a new approval milestone with 99.9% Yes votes and just 13 tickets voting against the proposal among the 47% turnout.
+
 - The fourth iteration of the Bug Bounty [proposal](https://proposals.decred.org/record/e1f104b) returned with a boosted payout schedule and was approved with 98.5% Yes votes and a turnout of 47%. This is +0.5% Yes votes and +15% turnout compared to [Phase 3](https://proposals.decred.org/proposals/2170df6). @degeri [thanks](https://twitter.com/degeri_crypto/status/1409714139396591617) the stakeholders for the ever increasing amount of faith and trust.
+
 - The second phase of the big translation [proposal](https://proposals.decred.org/record/af9942a) was approved with 97.3% approval and a turnout of 46% - a big increase in support from 75% Yes and 28% turnout for the first [proposal](https://proposals.decred.org/proposals/c093b8a).
 
 See Politeia Digest [issue 43](https://blockcommons.red/politeia-digest/issue043/) for more details on the month's proposals.
