--- a/journal/202106.md
+++ b/journal/202106.md
@@ -285,7 +285,7 @@ Distribution of 1,000 actually [mined blocks](https://miningpoolstats.stream/dec
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=kpb32srm-kqn8vbkn&scale=linear&bin=block&axis=time) was 7.33-7.72 million DCR, meaning that 56.1-59% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kpb32srm-kqn8vbkn&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-**VSP**: On Jul 1, ~8,000 (-200) live tickets were managed by vspd servers and ~600 (-500) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the 12 legacy and 13 new VSPs managed 20.9% of the ticket pool. Delisted but still active legacy VSPs managed 26 live tickets (-35).
+**VSP**: On Jul 1, ~8,000 (-200) live tickets were managed by vspd servers and ~600 (-500) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the 12 legacy and 13 new VSPs managed 20.9% of the ticket pool, down from 22.7% on Jun 1. Delisted but still active legacy VSPs managed 26 live tickets (-35).
 
 **Nodes**: Throughout June there were around 216 reachable nodes according to [dcrextdata](https://analytics.planetdecred.org/nodes).
 
@@ -300,17 +300,25 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 34 nodes (+
 
 ## Ecosystem
 
-{ hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best }
+[stakey.net](https://stakey.net/) has [removed](https://citadel.stakey.net/@support/106416385081730641) the web interface for the legacy dcrstakepool instance. Voting wallets and the API will be maintained until users migrate to vspd. As of Jul 1, stakey.net's legacy VSP managed 63 live tickets, down from 134 on Jun 1. Its [vspd instance](https://stakey.net/) has become the largest, managing more than 2,200 live tickets.
 
-stakey.net has onions! https://stakey.net/ , legacy UI removed but wallets still up https://citadel.stakey.net/@support/106416385081730641
+To maintain decentralization, it is recommended to avoid providers that control too many tickets. But stakey.net presents a "problem" here, as it is the only known VSP offering a Tor hidden service. Other providers are welcome to the competition!
 
-{ check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
+dcr.farm now redirects to its [vspd instance](https://vsp.dcr.farm/) but @infertux [confirmed](https://github.com/decred/dcrwebapi/issues/146#issuecomment-865451784) that its voting wallets are up and will stay up until all tickets vote (32 as of Jun 22). The status of dcr.farm's legacy and vspd wallets can be checked on a dedicated [status page](https://stats.uptimerobot.com/46PWkSrZD).
 
-{ check https://github.com/decred/dcrweb/commits/master to detect added/removed services }
+[YieldWallet](https://yieldwallet.io/)'s legacy VSP has voted its final ticket and has been shut down for good. Thank you for the service!
 
-- Ledger Live fixed in v2.29.0 https://status.ledger.com/incidents/j1sypv88pgs6
+New VSP from crypto-synergy.net is up on [mainnet](https://vspd.synergy-crypto.net/) and [testnet](https://vspd-testnet.synergy-crypto.net/). The mainnet instance reports its first voted ticket (a requirement for all new VSPs) but it needs to pass the [review](https://github.com/decred/dcrwebapi/pull/147) to get listed on [decred.org/vsp](https://decred.org/vsp/).
+
+Ledger Live users are recommended to [update](https://www.ledger.com/ledger-live) to version 2.29.0 or later where [issues](https://status.ledger.com/incidents/j1sypv88pgs6) with syncing and sending DCR in have been fixed. The disruption between first [mentions](https://status.ledger.com/incidents/j1sypv88pgs6) of the issue and the release of [v2.29.0](https://github.com/LedgerHQ/ledger-live-desktop/releases/tag/v2.29.0) lasted around 22 days.
+
+It is worth reminding that stakey.net hosts a modestly called Twitter alternative:
+
+> This _Decred citadel_ is a modestly fast, secure, and up-to-date Mastodon instance with monitored server availability and nightly off-site backups. Open to the Decred community. (invite link [here](https://citadel.stakey.net/@support/105249104743040856))
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
+
+Join our [#services](https://chat.decred.org/#/room/#services:decred.org) chat to follow Decred ecosystem updates.
 
 
 ## Outreach
