Eco WazirX and vspd upgrade reminder

--- a/journal/202106.md
+++ b/journal/202106.md
@@ -310,7 +310,11 @@ dcr.farm now redirects to its [vspd instance](https://vsp.dcr.farm/) but @infert
 
 New VSP from crypto-synergy.net is up on [mainnet](https://vspd.synergy-crypto.net/) and [testnet](https://vspd-testnet.synergy-crypto.net/). The mainnet instance reports its first voted ticket (a requirement for all new VSPs) but it needs to pass the [review](https://github.com/decred/dcrwebapi/pull/147) to get listed on [decred.org/vsp](https://decred.org/vsp/).
 
+At this point legacy VSPs hold less than 1.4% of the ticket pool and upgrading to vspd is [recommended](https://twitter.com/JamieHoldstock/status/1405069123453784065) to avoid the risk of missed tickets, e.g. in a scenario where another consensus upgrade is activated while [dcrstakepool](https://github.com/decred/dcrstakepool) is _not_ patched to vote with it.
+
 Ledger Live users are recommended to [update](https://www.ledger.com/ledger-live) to version 2.29.0 or later where [issues](https://status.ledger.com/incidents/j1sypv88pgs6) with syncing and sending DCR in have been fixed. The disruption between first [mentions](https://status.ledger.com/incidents/j1sypv88pgs6) of the issue and the release of [v2.29.0](https://github.com/LedgerHQ/ledger-live-desktop/releases/tag/v2.29.0) lasted around 22 days.
+
+Indian [WazirX](https://wazirx.com/) has [enabled](https://twitter.com/WazirXIndia/status/1408022090750496776) DCR/INR and DCR/USDT trading. DCR was part of the ["Rapid Listing"](https://blog.wazirx.com/rapid-listing-initiative-on-wazirx/) process where trading starts sooner but deposit and withdrawal options are limited until the full integration is completed. In case of this listing, inter-wallet deposits and withdrawals between WazirX and Binance are [available](https://twitter.com/WazirXIndia/status/1407655011925073921) with no fees.
 
 It is worth reminding that stakey.net hosts a modestly called Twitter alternative:
 
