--- a/journal/202106.md
+++ b/journal/202106.md
@@ -347,13 +347,7 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
-
-Upcoming:
-
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{ announcements from events ppl }
+- Jun 12 - Arab Blockchain Week 2021 - Internet. @arij introduced on-chain and off-chain governance and examples of both in Decred (see links and slides in the [report](https://decredcommunity.github.io/events/index/20210612.1)).
 
 
 ## Media
