--- a/journal/202106.md
+++ b/journal/202106.md
@@ -354,12 +354,6 @@ Attended:
 
 ## Media
 
-{ notable community efforts }
-
-{ ratings news }
-
-{ hint: use the following format: (title in Sentence case) by (author) ([domain](link)) - (optional comment) }
-
 Selected articles:
 
 - Treasury expenditure policy bug by @matheusd ([blog.decred.org](https://blog.decred.org/2021/06/25/Treasury-Expenditure-Policy-Bug/))
@@ -368,25 +362,24 @@ Selected articles:
 Videos:
 
 - Decred News Update - v1.6.3, DEX integration, first DAO Treasury spend, staking ATH & more by @Exitus ([youtube](https://www.youtube.com/watch?v=JXbcBKnUgYc))
-- Should Money Be Private - Decred Fundamentals by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=1iCpzXC6WBw))
-- The DAO revolution - Decentralised funding by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=hk2USZ-MxqM)) { fix title }
-
-Audio:
-
-- {}
+- Should money be private - Decred Fundamentals by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=1iCpzXC6WBw))
+- The evolution of the Treasury - Decred Fundamentals by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=hk2USZ-MxqM))
+- Coin supply and distribution - Decred Fundamental by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=mGhOOVUP1Dg))
+- 13 million landmark reached - Decred Society by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=iDCo9VOVSKU))
+- Decred - Top reasons this cryptocurrency rocks! by Ripe For Investing ([youtube](https://www.youtube.com/watch?v=JnBb5uiTSFU))
+- Don Jon aka PurpleSuede22 speaks to us on the secrets behind Decred's success! by [CryptoND1](https://twitter.com/CryptoND1) ([youtube](https://www.youtube.com/watch?v=dHif4vuIenA))
+- Coin Review - Decred by Spencer Tarring ([youtube](https://www.youtube.com/watch?v=eEZZVgMEYVs))
+- Why Decred is a game changer by Todd F. Maki ([twitter](https://twitter.com/toddfmaki/status/1401734301243232259), [part 2](https://twitter.com/toddfmaki/status/1401812413947604992))
+- @OfficialCryptos is now on [YouTube](https://www.youtube.com/channel/UC6_TA2_NBf5i99vFKsqgbKQ)
 
 Art and fun:
 
-- https://twitter.com/OfficialCryptos/status/1400149513462026241
-- https://twitter.com/OfficialCryptos/status/1400737260753018882
+- objects [in mirror](https://twitter.com/OfficialCryptos/status/1400149513462026241) are closer than they appear
+- Cathie [on Bison](https://twitter.com/OfficialCryptos/status/1400737260753018882)
 
 Translations:
 
 - Decred Journal May 2021 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4) and Chinese (@Dominic). April issue in Spanish is out too. Thank you all!
-
-Other non-English content:
-
-- {}
 
 
 ## Discussions
