Eco peertube, Di Reddit, Markets

--- a/journal/202106.md
+++ b/journal/202106.md
@@ -318,9 +318,11 @@ Ledger Live users are recommended to [update](https://www.ledger.com/ledger-live
 
 Indian [WazirX](https://wazirx.com/) has [enabled](https://twitter.com/WazirXIndia/status/1408022090750496776) DCR/INR and DCR/USDT trading. DCR was part of the ["Rapid Listing"](https://blog.wazirx.com/rapid-listing-initiative-on-wazirx/) process where trading starts sooner but deposit and withdrawal options are limited until the full integration is completed. In case of this listing, inter-wallet deposits and withdrawals between WazirX and Binance are [available](https://twitter.com/WazirXIndia/status/1407655011925073921) with no fees. WazirX was [acquired](https://www.binance.com/en/blog/404105749895733248/Binance-Acquires-Indias-Leading-Digital-Asset-Platform-WazirX-to-Launch-Multiple-FiattoCrypto-Gateways) by Binance in 2019.
 
-It is worth reminding that stakey.net hosts a modestly called Twitter alternative:
+For those who missed it, there are two services in the wider Decred ecosystem. One is a modestly called Twitter alternative from stakey.net:
 
 > This _Decred citadel_ is a modestly fast, secure, and up-to-date Mastodon instance with monitored server availability and nightly off-site backups. Open to the Decred community. (invite link [here](https://citadel.stakey.net/@support/105249104743040856))
+
+And another is @karamble's [PeerTube instance](https://tube.decredcommunity.org/videos/recently-added) that mirrors Decred video content for increased resilience and decentralization.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -386,13 +388,13 @@ Translations:
 
 Comm systems news:
 
-- {}
-
-{ selected discussed topics, as bullet list or one paragraph per topic }
+- Matrix temporarily had degraded performance due to a large scale attempt to bulk-register [bot accounts](https://twitter.com/matrixdotorg/status/1409873992454967304) and spam the network.
 
 Selected Reddit posts:
 
-- {}
+- Decred, PoW's energy use and [renewables](https://www.reddit.com/r/decred/comments/o931uc/random_question_dcr_pow_and_renewables/)
+- @atweiden's strong [pitch](https://www.reddit.com/r/decred/comments/o2g8c2/dex_decentralized_exchange/) for DCRDEX
+- THORChain integration [bounty](https://www.reddit.com/r/decred/comments/o14da0/decred_community_member_willing_to_put_up_100k_to/) and comparison to DCRDEX
 
 Selected Twitter discussions:
 
@@ -407,13 +409,10 @@ Selected Twitter discussions:
 
 ## Markets
 
-In June DCR was trading between USD 87.66-174.59 / BTC 0.002988-0.004684. The average daily rate was $131.52.
-
-{ markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
-
-{ dcrdex updates, esp. volume }
+In June DCR was trading between USD 87.66-174.59 / BTC 0.00298-0.00468. The average daily rate was $131.52.
 
 { maybe https://twitter.com/lukebp_/status/1409151569195638785 }
+
 
 ## Relevant External
 
