--- a/journal/202106.md
+++ b/journal/202106.md
@@ -418,21 +418,21 @@ In June DCR was trading between USD 87.66-174.59 / BTC 0.00298-0.00468. The aver
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
 
-A large scale migration of Bitcoin (and others) hashrate from China is underway, and it's being covered in all the [mainstream](https://www.cnbc.com/2021/06/15/chinas-bitcoin-miner-exodus-.html) [business](https://www.bloomberg.com/news/articles/2021-06-20/bitcoin-drops-as-hashrate-declines-with-china-mining-crackdown) [publications](https://www.forbes.com/sites/zinnialee/2021/06/23/bitcoin-mining-companies-exiting-china-as-authorities-crackdown-on-cryptocurrencies/).  The exodus was triggered after Chinese authorities made statements about cracking down on Bitcoin mining, and then several provinces made it clear to miners that they had to stop. One of the issues the mining companies face in [relocating](https://www.coindesk.com/bitcoin-unpacking-hashrate-nic-cart-migration) their hashing hardware is with the current [high](https://compassmining.io/education/cost-bitcoin-miners-leaving-china/) price of international shipping.
+A large scale migration of Bitcoin (and others) hashrate from China is underway, and it's being covered in all the [mainstream](https://www.cnbc.com/2021/06/15/chinas-bitcoin-miner-exodus-.html) [business](https://www.bloomberg.com/news/articles/2021-06-20/bitcoin-drops-as-hashrate-declines-with-china-mining-crackdown) [publications](https://www.forbes.com/sites/zinnialee/2021/06/23/bitcoin-mining-companies-exiting-china-as-authorities-crackdown-on-cryptocurrencies/). The exodus was triggered after Chinese authorities made statements about cracking down on Bitcoin mining, and then several provinces made it clear to miners that they had to stop. One of the issues the mining companies face in [relocating](https://www.coindesk.com/bitcoin-unpacking-hashrate-nic-cart-migration) their hashing hardware is with the current [high](https://compassmining.io/education/cost-bitcoin-miners-leaving-china/) price of international shipping.
 
-some BTC "hacked" story https://www.reddit.com/r/Bitcoin/comments/nv7x7j/bitcoin_was_not_hacked_by_the_fbi_the_hackers/ { relevant? rr: could make a note about how bad the coverage was by mainstream press}
+some BTC "hacked" story https://www.reddit.com/r/Bitcoin/comments/nv7x7j/bitcoin_was_not_hacked_by_the_fbi_the_hackers/ { relevant? rr: could make a note about how bad the coverage was by mainstream press; bee: yes please if its quick }
 
-The Zcash Open Major Grants program has [funded](https://www.coindesk.com/tor-project-zcash-open-major-grants-zomg-arti-coding-language-upgrade) the Tor Project with $670,000, to be used for paying developer salaries as they work towards Arti (A rust tor implementation) - which would make Tor more accessible to other applications, including Zcash.
+The Zcash Open Major Grants (ZOMG) program has [funded](https://www.coindesk.com/tor-project-zcash-open-major-grants-zomg-arti-coding-language-upgrade) the Tor Project with $670,000, to be used for paying developer salaries as they work towards Arti (A Rust Tor Implementation) - which would make Tor more accessible to other applications, including Zcash.
 
-The Uniswap community is [considering](https://thedefiant.io/uniswap-lobby/) funding a "DeFi political defense fund" with $27M to $40M USD, the fund's purpose would be to "educate policymakers, achieve regulatory clarity for DeFi, support DeFi and decentralized governance, and encourage other DeFi protocols to contribute ideas and support". As it progressed through a [temperature check](https://gov.uniswap.org/t/temperature-check-funding-a-political-defense-of-defi/12557) and [consensus check](https://gov.uniswap.org/t/consensus-check-uni-should-fund-a-political-defense-organization-for-decentralized-finance-copy/12717) phase, it became the more general "DeFi Education Fund" by the time it came to a [vote](https://app.uniswap.org/#/vote/0/1) (which concluded at the end of June with 84% approval.
+The Uniswap community is [considering](https://thedefiant.io/uniswap-lobby/) funding a "DeFi political defense fund" with $27M to $40M USD, the fund's purpose would be to "educate policymakers, achieve regulatory clarity for DeFi, support DeFi and decentralized governance, and encourage other DeFi protocols to contribute ideas and support". As it progressed through a [temperature check](https://gov.uniswap.org/t/temperature-check-funding-a-political-defense-of-defi/12557) and [consensus check](https://gov.uniswap.org/t/consensus-check-uni-should-fund-a-political-defense-organization-for-decentralized-finance-copy/12717) phase, it became the more general "DeFi Education Fund" by the time it came to a [vote](https://app.uniswap.org/#/vote/0/1) (which concluded at the end of June with 84% approval).
 
-The Curve DeFi project is [considering](https://www.theblockcrypto.com/post/108561/the-first-dao-lawsuit-proposal-asks-if-curve-should-protect-its-ip) whether to enforce its intellectual property rights in court. A [proposal](https://gov.curve.fi/t/cip-xx-enforce-curves-ip-rights/1890/3) is under discussion which would see the Curve DAO members soliciting and approving or rejecting proposals from law firms, related to shutting down competitor projects that have copied Curve's code (which includes the stipulation that “no license, right of reproduction or distribution or other right with respect thereto is granted or implied").
+The Curve DeFi project is [considering](https://www.theblockcrypto.com/post/108561/the-first-dao-lawsuit-proposal-asks-if-curve-should-protect-its-ip) whether to enforce its intellectual property rights in court. A [proposal](https://gov.curve.fi/t/cip-xx-enforce-curves-ip-rights/1890/3) is under discussion which would see the Curve DAO members soliciting and approving or rejecting proposals from law firms, related to shutting down competitor projects that have copied Curve's code (which includes the stipulation that "no license, right of reproduction or distribution or other right with respect thereto is granted or implied").
 
 There has been a run on the Iron Titanium protocol, which saw it [incentivize](https://www.coindesk.com/iron-finance-defi-titan-iron-price-drop) its own rapid and irrevocable decline to zero once certain rare trading conditions were met.
 
 The ironically titled "SafeDollar" also went to zero this month after being [hacked](https://securityboulevard.com/2021/06/safedollar-stablecoin-not-safe-nor-stable-hack-sends-value-to-zero/), with the attacker looting around $248,000 worth of tokens.
 
-THORChain, which some Decred community members have been engaging with around a DCR integration, [suffered](https://twitter.com/THORChain/status/1409630489611182081) its first malicious attack. A [postmortem](https://twitter.com/THORChain/status/1409736048960180227) indicated $140K was taken by exploiting a logic error in the ETH Bifrost. The network was halted for 6 hours while a fix was deployed. THORChain said it will cover losses incurred by users from treasury funds.
+THORChain, which some Decred community members have been engaging with around a DCR integration, [suffered](https://twitter.com/THORChain/status/1409630489611182081) its first malicious attack. A [postmortem](https://twitter.com/THORChain/status/1409736048960180227) indicated $140K was taken by exploiting a logic error in the ETH Bifrost module. The network was halted for 6 hours while a fix was deployed. THORChain said it will cover losses incurred by users from treasury funds.
 
 { governance, funding, chain forks, community splits }
 
